force-app/main/default/objects/MUSW__Resource_Availability__c/MUSW__Resource_Availability__c.object-meta.xml
<CustomObject>
    <label>Resource Availability</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Availabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>