force-app/main/default/objects/MUSW__Resource_Availability__c/fields/MUSW__Day_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Day_of_the_Week__c</fullName>
    <label>Day of the Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Days_of_the_Week</valueSetName>
    </valueSet>
</CustomField>