force-app/main/default/objects/MUSW__Resource_Availability__c/fields/MUSW__Resource__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Resource__c</fullName>
    <label>Resource</label>
    <referenceTo>MUSW__Resource__c</referenceTo>
    <relationshipLabel>Resource Availabilities</relationshipLabel>
    <relationshipName>Resource_Availabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>