force-app/main/default/objects/MUSW__Resource_Availability__c/fields/MUSW__Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Working_Hours__c</fullName>
    <label>Working Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>